Added a staff commands/crate keys functionality, alongside command logging for such.